examples/valid/program50.c
int main(void) {
    int x;
    x = 17;
    x = x % 5;
    return x;
}

