examples/invalid/program23.c
int f(int a) {
    return a;
}

int main(void) {
    int x;
    x = f(5, 10);
    return x;
}

